--- a/java_plugins/README
+++ b/java_plugins/README
@@ -1,3 +1,3 @@
 This is a manual for java plugins development!
 It mainly includes four functions which are XMLParser, Main, PluginManager, and Plugin javabe.
-CopyRight 2020. Junjie Zhu. All Rights Reserved.
+CopyRight © 2020. Junjie Zhu. All Rights Reserved.
